[package]
name = "mandlebrot"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
winit_input_helper = "0.10"
pixels = "0.7.0"
log = "0.4"
image ="0.23.14"
rand = "0.8.4"
